syntax = "proto3";

option csharp_namespace = "Caching.Faster.Proxy";

package Proxy;

import "Protos/common.proto";

service ProxyCache {
  rpc Get (GetRequest) returns (GetResponse);
  rpc Set (SetRequest) returns (SetResponse);
}

message GetRequest {
  repeated string key = 1;
}

message GetResponse {
  repeated Common.KeyValuePair results = 1;
}

message SetRequest {
  repeated Common.KeyValuePair pairs = 1;
}

message SetResponse {
  repeated Common.KeyValuePair results = 1;
}
